css/style.css
/* ... */
#loading_wrapper {
  position: fixed;
  display: table;
  background-color: black;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  color: white;
  font-size: 20px;
  letter-spacing: 5px;
  text-align: center;
  vertical-align: middle;
  z-index: 100;
}
#loading_wrapper span {
  display: table-cell;
  vertical-align: middle;
  display: parent;
}
.content {
  height: 100%;
  width: 100%;
  overflow: hidden;
}
.background {
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: -1;
}
.cast-bg {
  opacity: 0;
  z-index: -1;
}
.bg-in {
  opacity: 1;
}
.new-bg {
  z-index: 0;
}
#title_wrapper {
  clear: both;
  position: relative;
  height: 220px;
  left: 5%;
  width: 650px;
}
#title_wrapper br {
  line-height: 3em;
}
#title_wrapper > a {
  cursor: pointer;
  text-decoration: none;
}
#title_floater {
  float: left;
  margin-bottom: -180px;
}
#title_glow {
  position: relative;
  top: 45px;
  box-shadow: 0px 0px 150px 6px white;
}
#title {
  font-size: 80px;
  display: block;
  letter-spacing: 30px;
  color: white;
  text-align: center;
}
#subtitle {
  display: block;
  font-size: 30px;
  letter-spacing: 25px;
  color: silver;
  text-align: center;
}
#comingsoon {
  display: block;
  font-size: 40px;
  letter-spacing: 10px;
  color: silver;
  text-align: center;
}
#navbar_background {
  position: fixed;
  bottom: 0px;
  height: 20px;
  width: 100%;
  background-color: black;
  box-shadow: 0px 0px 70px 50px black;
}
#navbar_wrapper {
  position: fixed;
  bottom: 10px;
  width: 100%;
  text-align: center;
}
#navbar {
  display: table;
  margin-left: auto;
  margin-right: auto;
  color: white;
  letter-spacing: 5px;
  font-size: 20px;
  bottom: 10px;
}
#navbar ul {
  list-style-type: none;
}
#navbar > ul {
  display: table-row;
}
#navbar > ul > li {
  display: table-cell;
  width: 100px;
}
.active-nav {
  border-bottom: none!important;
  border-left: 20px solid transparent!important;
  border-right: 20px solid transparent!important;
  padding: 0px!important;
  padding-top: 20px!important;
  padding-bottom: 9px!important;
  cursor: pointer;
  color: #3cd5ff!important;
}
#navbar a {
  border-left: 0px solid transparent;
  border-right: 0px solid transparent;
  text-decoration: none;
  color: inherit;
  display: block;
  padding: 20px;
  padding-bottom: 10px;
  -webkit-transition: color 0.5s ease;
  transition: color 0.5s ease;
  -webkit-transition: border-color 0.5s ease;
  transition: border-color 0.5s ease;
}
#navbar a:hover {
  border-bottom: 1px solid #3cd5ff;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  padding: 0px;
  padding-top: 20px;
  padding-bottom: 9px;
  cursor: pointer;
  color: #3cd5ff;
}
.nav-link-changing {
  color: #3cd5ff !important;
  border-bottom: none!important;
  padding-bottom: 10px!important;
}
.nav-link-whiting {
  color: white!important;
}
.viewer_wrapper {
  position: fixed;
  bottom: 200px;
  top: 20px;
}
.viewer_wrapper_small {
  position: fixed;
  bottom: 200px;
  top: 20px;
  opacity: 0.3;
}
#gallery_wrapper {
  height: 100%;
  overflow-y: auto;
}
#gallery_wrapper_left {
  margin-left: 20px;
  left: 0;
}
#gallery_wrapper_right {
  margin-right: 20px;
  right: 0;
}
.gallery_thumb {
  width: 100%;
}
.scrollpanel_wrapper {
  position: fixed;
  height: 100px;
  bottom: 50px;
  width: 100%;
}
.scrollpanel {
  height: 100%;
  overflow: auto;
  overflow-y: hidden;
  white-space: nowrap;
}
.scrollpanel img {
  padding-left: 20px;
  padding-right: 20px;
  height: 100%;
}
.scrollpanel_background {
  position: fixed;
  bottom: 0px;
  height: 20px;
  width: 100%;
  background-color: black;
  box-shadow: 0px 0px 100px 50px black;
}
#image-viewer > .modal-dialog {
  width: 90%;
  height: 90%;
  padding: 0;
  margin-top: 15px;
}
#image-viewer > .modal-dialog > .modal-content {
  background-color: black;
  width: 100%;
  height: 100%;
}
#image-viewer > .modal-dialog > .modal-content .modal-body {
  padding: 0px;
}
.gallery-arrow {
  height: 100%;
  font-family: FontAwesome;
  font-size: 50px;
  display: table;
  margin: auto;
}
#image-viewer .col-sm-1 {
  cursor: pointer;
}
.gallery-arrow > div {
  display: table-cell;
  vertical-align: middle;
}
#gallery_pic_wrapper {
  height: 100%;
  text-align: center;
}
#gallery_pic {
  height: 100%;
}
.actor {
  width: 100%;
  padding: 20px;
  padding-right: 20%;
  background-color: rgba(30, 30, 30, 0.8);
  position: absolute;
  bottom: 70px;
  right: -100%;
}
.a-fade {
  opacity: 0;
}
.avisi {
  right: -20px;
}
.bio {
  display: inline-block;
  color: white;
  white-space: normal;
  line-height: 16px;
}
.bio div {
  border-top: 1px solid white;
}
.first-word {
  font-size: 35px;
  letter-spacing: 5px;
}
.actor_pic {
  vertical-align: middle;
  display: inline-block;
  height: 100%;
  width: 22.5%;
  text-align: center;
}
.actor_pic img {
  width: 100%;
  max-height: 100%;
  border: 1px solid white;
}
.actor_name {
  vertical-align: middle;
  display: inline-block;
  height: 100%;
  width: 4%;
}
.actor-left .actor_name div {
  left: -75px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  -o-transform: rotate(-90deg);
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}
.actor-right .actor_name div {
  left: -100px;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
}
.actor_name div {
  position: relative;
  display: inline-block;
  top: 90px;
  color: white;
  letter-spacing: 10px;
  font-size: 30px;
}
.actor_spacer {
  vertical-align: middle;
  display: inline-block;
  height: 100%;
  width: 4%;
}
.scroll_wrapper {
  overflow: hidden;
  overflow-y: auto;
  height: 100%;
}
.viewer-panel {
  display: table;
  vertical-align: middle;
}
#viewer-floater {
  float: left;
  height: 50%;
  margin-bottom: -279;
}
#viewer {
  clear: both;
  height: 500;
  position: relative;
}
/* ... */

